--- a/1st.website/1st.website.html
+++ b/1st.website/1st.website.html
@@ -7,10 +7,10 @@
         <div>
             <nav>
                 <ol class="links">
-                    <li class="links"><a href="#">top 3 fav cats</a></li>
-                    <li class="links"><a href="#">which cat is your fav</a></li>
-                    <li class="links"><a href="#">websites with good cat info</a></li>
-                    <li class="links"><a href="#">type of cats</a></li>
+                    <li class="links"><a href="1st.website.html">top 3 fav cats</a></li>
+                    <li class="links"><a href="2ndpage.html">which cat is your fav</a></li>
+                    <li class="links"><a href="3rdpage.html">websites with good cat info</a></li>
+                    <li class="links"><a href="4thpage.html">type of cats</a></li>
                 </ol>
             </nav>
             <h1>top 3 fav cats</h1>
